================================================================================
SVN $Id: ChangeLog 45058 2013-03-20 16:12:21Z jedwards $
SVN $URL: https://svn-ccsm-models.cgd.ucar.edu/tools/genf90/trunk/ChangeLog $
================================================================================
This file describes what tags were created and why
===========================
Originator: jedwards
Date: Mar 20, 2013
Model: genf90
Version: genf90_130320
One-line summary: Move to new directory

===========================
