@@ -7,6 +7,14 @@ This file describes what tags were created and why
 Originator: jedwards
 Date: Mar 20, 2013
 Model: genf90
+Version: genf90_130320a
+One-line summary: generate helper file dtypes.h
+	M genf90.pl
+	
+===========================
+Originator: jedwards
+Date: Mar 20, 2013
+Model: genf90
 Version: genf90_130320
 One-line summary: Move to new directory
 
